Feat/barcode -v1(#123)
* v1

* website-google-serarch-match

* v1

* v1

* v1-button

* v1-button
